Features under the section marked 'In Progress' are currently in the process of being implemented. They are to be considered unstable and not ready for use.

Features under the section marked 'Current' are completed but pending release as a gem. If you need any of these, you'll need to use the latest source from the git repository.

Features under a numbered section are complete and available in the Wrest gem.


== Coming soon
 * Optional libcurl implementations of the Request/Response classes (for those on MRI who need better performance) 
 * Cookie support
 * Proxy support 
 * 304/ETag response caching
  
== In progress
 * Adding live functional tests to codebase (see spec/functional no feasible way to spec drive Wrest::Resource otherwise)
 * Adding support for keep-alive connections
 
== Current
 * Added Nokogiri as a fallback for LibXML Ruby before we give up and use REXML. (Nokogiri is available on JRuby, unlike ruby-libxml)
 * Added code to attempt to load JREXML (for what its worth) when using REXML on JRuby
 
== 0.0.9
 * Added redirect follow support for GET requests (see examples/redirection.rb)
 * Auto redirection limit
 * Request timeout limit config
 * Added an alias_accessor macro to allow alternative names for attribute accessors (see examples/wow_realm_status.rb) 
 * Removed the need to explicitly include AttributesContainer::Typecaster or to use the enable_typecasting_support macro. The call to typecast now does this for us. See AttributesContainer#typecast and AttributesContainer::Typecaster#typecast
   
== 0.0.8
 * Added URI extension using the [] method (see examples/delicious.rb)
 * Refactored out Request as the first step to adding Response caching
 
 