@@ -1,0 +1,1 @@
+require "#{WREST_ROOT}/wrest/test/request_patches"
