@@ -16,8 +16,9 @@ Features under a numbered section are complete and available in the Wrest gem.
  * Adding support for keep-alive connections
  
 == Current
- * Added Nokogiri as a fallback for LibXML Ruby before we give up and use REXML. (Nokogiri is available on JRuby, unlike ruby-libxml)
- * Added code to attempt to load JREXML (for what its worth) when using REXML on JRuby
+ * Added Nokogiri as a fallback for LibXML Ruby before we give up and use REXML. (Nokogiri is available on JRuby, unlike LibXML-ruby)
+ * Added code to attempt to load JREXML (for what it's worth) when using REXML on JRuby
+ * Ensure that Wrest throws an exception when an actual request is made in a test environment in Rails (RAILS_ENV == 'test')
  
 == 0.0.9
  * Added redirect follow support for GET requests (see examples/redirection.rb)
